# tictactoe-cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
source/: board.cpp  board.h  game.cpp  game.h  main.cpp  temp.out
